tests-build/tests/fail/macros_core_no_default.rs
use tests_build::tokio;

#[tokio::main]
async fn my_fn() {}

fn main() {}
