tests-build/tests/fail/macros_core_no_default.stderr
error: The default runtime flavor is `multi_thread`, but the `rt-multi-thread` feature is disabled.
 --> $DIR/macros_core_no_default.rs:3:1
  |
3 | #[tokio::main]
  | ^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `tokio::main` (in Nightly builds, run with -Z macro-backtrace for more info)
